# django-enforce-host

./: .gitignore  .travis.yml  README.md  dev-requirements.txt  format  manage.py  pyproject.toml  runtests  setup.py
.github/workflows/: ci.yml  pypi.yml
enforce_host/: __init__.py
enforce_host/tests/: settings.py  tests.py  urls.py
enforce_hostname/: __init__.py
enforce_hostname/tests/: settings.py  tests.py
